--- a/views/index/welcome.ejs
+++ b/views/index/welcome.ejs
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <title>StoryBooks</title>
-</head>
+  <%- include ("../partials/_tophalf.ejs") %>
 <body>
   <%- include ("../partials/_header.ejs") %>
   <main>
@@ -20,17 +13,7 @@
       <% } %>
     </div>
   </main>
-<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script>
-// document.addEventListener('DOMContentLoaded', () => {
-//   var elems = document.querySelectorAll('.sidenav');
-//   var instances = M.sidenav.init(elems, options);
-// });
-$(document).ready(function(){
-    $('.sidenav').sidenav();
-  });
-</script>
+  <%- include ("../partials/_footer.ejs") %>
+  <%- include ("../partials/_bottomhalf.ejs") %>
 </body>
 </html>
