--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -33,6 +33,6 @@
 </ul>
 <% if (user) { %>
 <div class="fixed-action-btn">
-  <a href="/add" class="btn-floating btn-large red"><i class="fa fa-plus"></i></a>
+  <a href="/stories/add" class="btn-floating btn-large red"><i class="fa fa-plus"></i></a>
 </div>
 <% } %>
