--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include ("../partials/_tophalf.ejs") %>
+<%- include ("../partials/_tophalf.ejs") %>
 <body>
   <%- include ("../partials/_header.ejs") %>
   <main>
     <div class="container">
-      <h1>Show Story</h1>
+      <div class="row">
+        <div class="col s12 m9">
+          <h2 class="header"><%= story.title%></h2>
+          <div class="card">
+            <div class="card-stacked">
+              <div class="card-content">
+                <span class="card-title"><%= story.createdAt%></span>
+                <p><%- story.body%></p>
+              </div>
+              <div class="card-action">
+                <a href="/stories">Back To Stories</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m3">
+          <div class="card center-align">
+            <div class="card-content">
+              <span class="card-title"><%= user.firstName%> <%= user.lastName%></span>
+              <img src="<%= user.image%>" class="circle responsive-img" alt="<%=user.firstName%>">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <%- include ("../partials/_footer.ejs") %>
