--- a/views/index/dashboard.ejs
+++ b/views/index/dashboard.ejs
@@ -6,8 +6,38 @@
 <main>
   <div class="container">
     <h1>Welcome <%= user.firstName %> </h1>
-    <h4>Your Stories</h4>
-  </div>
+  <% if (stories.length>0) { %>
+    <h4 class="pink-text">Your Stories</h4>
+    <table class="striped">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Date</th>
+          <th>Status</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% stories.forEach(story => { %>
+          <tr>
+            <td><a href="/stories/show/<%= story._id%>"><%=story.title%></a></td>
+            <td><%= formatDate.formatDate(story.createdAt, "do of MMMM, YYYY")%></td>
+            <td> <span class="dash-status"><%=story.status%></span></td>
+            <td><a class="btn left-align" href="/stories/edit/<%= story._id%>"><i class="fa fa-pencil"></i>Edit</a>
+
+              <form class="" action="/stories/<%=story._id%>?_method=DELETE" id="delete-form" method="post">
+                <input type="hidden" name="_method" value="DELETE">
+                <button type="submit" name="button" class="red btn"><i class="fa fa-remove"></i> Delete</button>
+              </form>
+            </td>
+          </tr>
+          <% }) %>
+      </tbody>
+    </table>
+  <% } else { %>
+    <h4>You are yet to create a story</h4>
+  <% } %>
+</div>
 </main>
 <%- include ("../partials/_footer.ejs") %>
 <%- include ("../partials/_bottomhalf.ejs") %>
