--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -8,8 +8,8 @@
     <div class="col l4 offset-l2 s12">
       <h5 class="white-text">Links</h5>
       <ul>
-        <li><a class="grey-text text-lighten-3" href="#!">Public Stories</a></li>
-        <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+        <li><a class="grey-text text-lighten-3" href="/stories">Public Stories</a></li>
+        <li><a class="grey-text text-lighten-3" href="/about">About</a></li>
         <li><a class="grey-text text-lighten-3" href="#!">contact me</a></li>
       </ul>
     </div>
