--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,7 +6,7 @@
       <!-- RIGHT NAV -->
       <ul  class="right hide-on-small-only">
         <% if (user) { %>
-          <li><a href="/dashboard">Welcome <%= user.firstName %></a></li>
+          <li><a href="/dashboard/<%= user._id%>">Welcome <%= user.firstName %></a></li>
           <li><a href="/auth/logout"><i class="fa fa-sign-out left"></i> Logout</a></li>
         <% } else { %>
           <li><a href="/stories"><i class="fa fa-book left"></i> Public Stories</a></li>
