--- a/views/stories/edit.ejs
+++ b/views/stories/edit.ejs
@@ -2,13 +2,57 @@
 <html lang="en">
 <%- include ("../partials/_tophalf.ejs") %>
 <body>
-    <%- include ("../partials/_header.ejs") %>
-    <main>
-      <div class="container">
-        <h1>Edit Story</h1>
+  <%- include ("../partials/_header.ejs") %>
+  <main>
+    <div class="container">
+      <h1>Edit Story</h1>
+      <div class="row">
+        <form action="/stories/<%=story._id%>?_method=PUT" method="post" class="col s12">
+          <input type="hidden" name="_method" value="PUT">
+          <div class="row">
+            <div class="input-field">
+              <input type="text" name="title" value="<%=story.title%>">
+              <label for="title">Title</label>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field">
+              <select name="status">
+                <option value="public" selected>Public</option>
+                <option value="private">Private</option>
+                <option value="unpublished">Unpublished</option>
+              </select>
+              <label for="status">Status</label>
+            </div>
+          </div>
+
+          <div class="row">
+            <p>
+              <label><input type="checkbox" name="allowComments" class="filled-in" id="filled-in-box" <% if (story.allowComments) { %> checked="checked" <% } %>>
+              <span>Allow Comments</span>
+              </label>
+            </p>
+          </div>
+
+          <div class="row">
+            <div class="input-field">
+              <h5>Tell Us Your Story:</h5>
+              <textarea name="body"><%= story.body%></textarea>
+            </div>
+          </div>
+
+          <input type="submit" value="Save" class="btn">
+        </form>
       </div>
-    </main>
-    <%- include ("../partials/_footer.ejs") %>
-    <%- include ("../partials/_bottomhalf.ejs") %>
+    </div>
+  </main>
+  <%- include ("../partials/_footer.ejs") %>
+  <%- include ("../partials/_bottomhalf.ejs") %>
 </body>
+<script>
+CKEDITOR.replace("body", {
+  plugins: "wysiwygarea,toolbar,basicstyles,link"
+});
+</script>
 </html>
