--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -7,20 +7,22 @@
   <div class="container">
     <h2 class="header pink-text">Stories</h2>
     <div class="row">
-      <% if (stories && user ){ %>
+      <% if (stories.length>0){ %>
         <% stories.forEach(story => { %>
         <div class="col s12 m4">
           <div class="card hoverable">
             <div class="card-image">
-              <a href="/stories/edit/<%= user.id %>" class="btn-floating halfway-fab waves-effect waves-light red"><i class="fa fa-pencil"></i></a>
+              <% if (user) { %>
+                <%- editIcon.editIcon(story.user._id, user.id, story._id)%>
+              <% } %>
             </div>
             <div class="card-content center-align">
               <span class="card-title"><%= story.title %></span>
-              <p><%= truncate.truncate(stripTags.stripTags(story.body), 150) %></p>
+              <p class="story-body"><%= truncate.truncate(stripTags.stripTags(story.body), 150) %></p>
               <br>
                 <div class="chip">
-                <img src="<%= user.image %>">
-                <%= user.firstName %> <%= user.lastName %>
+                <img src="<%= story.user.image %>">
+                <%= story.user.firstName %> <%= story.user.lastName %>
                 </div>
             </div>
             <div class="card-action center-align">
@@ -32,7 +34,10 @@
         </div>
       <% }) %>
       <% } else { %>
-      <p>No stories to display...</p>
+      <h3>No stories to display...</h3>
+      <% if (!user) { %>
+      <a class="btn red darken-1" href="/auth/google"><i class="fa fa-google left"></i> Login With Google </a>
+      <% } %>
       <% } %>
     </div>
   </div>
