--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -6,12 +6,15 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col s12 m9">
+        <div class="col s12 m8">
           <h2 class="header"><%= story.title%></h2>
+          <% if (user) { %>
+          <span class="right-align"><%- editIcon.editIcon(story.user._id, user.id, story._id, false)%></span>
+          <% } %>
           <div class="card">
             <div class="card-stacked">
               <div class="card-content">
-                <span class="card-title"><%= story.createdAt%></span>
+                <span class="card-title"><%= formatDate.formatDate(story.createdAt, "MMMM Do gggg. hh:mm:ss a")%></span>
                 <p><%- story.body%></p>
               </div>
               <div class="card-action">
@@ -19,12 +22,48 @@
               </div>
             </div>
           </div>
+          <% if (story.allowComments) { %>
+            <div class="card">
+            <div class="card-content">
+              <span class="title">Comments</span>
+              <br>
+              <% if (user) {%>
+                <form class="" action="/stories/comment/<%=story._id%>" method="post">
+                  <div class="input-field inline">
+                    <textarea name="commentBody" class="materialize-textarea"></textarea>
+                    <label for="commentBody">Add comment</label>
+                    <input type="submit" name="" value="Submit" class="btn">
+                  </div>
+                </form>
+              <% } else { %>
+                <p><a href="/auth/google">Log</a> in to leave a comment</p>
+                <% } %>
+            </div>
+            </div>
+            <% story.comments.forEach(comment => {%>
+            <div class="card">
+              <div class="card-content">
+                <h5><%=comment.commentBody%></h5>
+                <div class="chip">
+                <img src="<%= comment.commentUser.image %>">
+                <%= comment.commentUser.firstName %> <%= comment.commentUser.lastName %>
+                </div>
+                <br>
+                <small>Posted: <%= formatDate.formatDate(comment.commentDate, "MMMM Do gggg. hh:mm:ss a")%></small>
+              </div>
+            </div>
+            <% }) %>
+          <% } %>
+
         </div>
-        <div class="col s12 m3">
+        <div class="col s12 m4">
           <div class="card center-align">
             <div class="card-content">
-              <span class="card-title"><%= user.firstName%> <%= user.lastName%></span>
-              <img src="<%= user.image%>" class="circle responsive-img" alt="<%=user.firstName%>">
+              <span class="card-title"><%= story.user.firstName%> <%= story.user.lastName%></span>
+              <img src="<%= story.user.image%>" class="circle responsive-img">
+            </div>
+            <div class="card-action">
+              <a href="/stories/user/<%= story.user._id%>">More from <%= story.user.firstName%></a>
             </div>
           </div>
         </div>
